[package]
name = "unified_db_api"
version = "0.1.0"
edition = "2021"
authors = ["Unified Database API Team"]
description = "A unified API for multiple database types"

[dependencies]
# Web framework
actix-web = "4.4.0"
actix-rt = "2.8.0"

# SQL databases
diesel = { version = "2.1.0", features = ["postgres", "mysql", "r2d2"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "any"] }

# NoSQL databases
mongodb = "2.6.0"
redis = "0.23.0"
# cassandra-rs = "3.0.0" # Temporarily commented out due to package not found

# Graph databases
neo4rs = "0.6.2"

# Time series databases
influxdb = "0.6.0"

# Vector databases
qdrant-client = "1.5.0"

# Connection pooling
r2d2 = "0.8.10"

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
toml = "0.7.6"

# Error handling
thiserror = "1.0.44"
anyhow = "1.0.72"

# Logging and diagnostics
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-actix-web = "0.7.5"

# API documentation
utoipa = { version = "3.4.4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }

# Configuration
config = "0.13.3"

# Utilities
async-trait = "0.1.71"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
futures = "0.3.28"
dotenv = "0.15.0"
